Downloading images using another way to prevent crash on some devices